--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         place these within <script> tags-->
 
         <!--put your external script links here-->
+        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="https://unpkg.com/topojson@3"></script>
+        <script src="https://unpkg.com/simple-statistics@7.7.0/dist/simple-statistics.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="lib/jquery-3.5.1.js"></script>
     </body>
