--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     
 
     <div class="card">
-      <h3 class="card-header">Best Neighborhood to live in Madison</h5>
+      <h3 class="card-header">Madison Neighborhood Comparisons</h5>
+      <h5 >Learn more about Madison neighborhoods! Different catagories can be selected and compared. Click on a neighborhood to learn more.</h5> 
+
       <div class="card-body">
         
 
